logging duration time :horse: :dragon: